Test all questions in iPhone5 for responsiveness. Amend media queries to avoid overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -404,4 +404,10 @@ body{
     margin-left: 2%;
     font-size: 1.4rem;
 }
+
+.correct-answer,
+.wrong-answer{
+    font-size: 1.5rem;
+}
+
 }
